<resources>
    <string name="app_name">Homeworks</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_forkify">Welcome to Forkify</string>
    <string name="start_your_culinary_adventure">Start your culinary adventure</string>
    <string name="log_in">Log in</string>
    <string name="create_new_account">Create new account</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="login_here">Login here</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="password_should_be_at_least_6_characters">Password should be at least 6 characters</string>
    <string name="fill_all_fields">Fill all fields</string>
    <string name="incorrect_email">Incorrect email</string>
    <string name="this_email_is_already_in_use">This email is already in use.</string>
    <string name="invalid_email_or_password">Invalid email or password.</string>
    <string name="unknown_error_occurred">Unknown error occurred.</string>
    <string name="start_by_searching">Start by searching for a recipe or an ingredient</string>
    <string name="search">Search</string>
    <string name="no_recipes_found_for_your_query_please_try_again">No recipes found for your query! Please try again ;)</string>
    <string name="details_not_found">Details not found :(</string>
    <string name="how_to_cook_it">How to cook it</string>
    <string name="ingredients">" Ingredients"</string>
    <string name="recipe_by">"Recipe by: "</string>
    <string name="browser_not_found">Browser not found</string>
    <string name="favorites">Favorites</string>
    <string name="no_bookmarks_yet_find_a_nice_recipe_and_bookmark_it">No bookmarks yet. Find a nice recipe and bookmark it</string>
    <string name="recipe_saved_successfully">Recipe saved successfully</string>
    <string name="my_own_recipes">My own recipes</string>
    <string name="instuctions">Instuctions:</string>
    <string name="add_ingredients">Add ingredients</string>
    <string name="save_recipe">Save Recipe</string>
    <string name="add_ingredient">Add Ingredient</string>
    <string name="add_ingredient_input">Add Ingredient Input</string>
    <string name="recipe_title">Recipe Title</string>
    <string name="instructions">Instructions</string>
    <string name="create_your_recipe">Create your recipe</string>
    <string name="please_fill_all_fields">Please fill all fields</string>
    <string name="recipe_id_not_found">Recipe id not found</string>
    <string name="open_original_recipe">open original recipe</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>