<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.screen.log_in.LoginFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/create_account"
        android:textAlignment="center"
        android:layout_marginTop="60dp"
        android:textColor="@color/carrot_color"
        android:textStyle="bold"
        android:textSize="30sp"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@mipmap/app_logo_foreground"
        android:layout_margin="20dp"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivLogo"
        android:layout_marginTop="40dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingVertical="15dp"
        android:maxLines="1"
        android:paddingHorizontal="12dp"
        android:background="@drawable/edit_text_selector"
        android:layout_marginHorizontal="20dp"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etEmail"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingVertical="15dp"
        android:paddingHorizontal="12dp"
        android:background="@drawable/edit_text_selector"
        android:layout_marginHorizontal="20dp"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etPasswordConfirmation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPassword"
        android:layout_marginTop="20dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingVertical="15dp"
        android:paddingHorizontal="12dp"
        android:background="@drawable/edit_text_selector"
        android:layout_marginHorizontal="20dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/etPasswordConfirmation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/log_in_btn_shape"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnNavToLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btnSignUp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/already_have_an_account"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:background="@color/transparent"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="@color/carrot_color"
        android:layout_margin="30dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>