<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.screen.addRecipe.AddRecipeFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvAddRecipeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/carrot_color"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/create_your_recipe"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/recipe_title"
        android:textColorHint="@color/hint_gray"
        android:textColor="@color/white"
        android:layout_marginTop="50dp"
        android:background="@drawable/input_recipe_title_shape_et"
        android:paddingVertical="15dp"
        android:layout_marginHorizontal="16dp"
        android:paddingHorizontal="14dp"
        android:maxLines="1"
        app:layout_constraintTop_toBottomOf="@id/tvAddRecipeTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etInstructions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/instructions"
        android:textColorHint="@color/hint_gray"
        android:textColor="@color/white"
        android:paddingHorizontal="14dp"
        android:background="@drawable/input_recipe_title_shape_et"
        android:paddingVertical="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/etTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ingredientsRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/etInstructions"
        app:layout_constraintBottom_toTopOf="@id/btnAddIngredient"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingBottom="10dp"
        tools:listitem="@layout/item_ingredient_edit" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAddIngredient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_ingredient_input"
        android:paddingHorizontal="20dp"
        android:textColor="@color/white"
        android:background="@drawable/log_in_btn_shape"
        app:layout_constraintBottom_toBottomOf="@id/btnSave"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAllCaps="false"
        android:layout_marginHorizontal="20dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_recipe"
        android:textColor="@color/white"
        android:layout_marginHorizontal="20dp"
        android:textAllCaps="false"
        android:paddingHorizontal="20dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/log_in_btn_shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>