<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.screen.auth.AuthFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgCooking"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toTopOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="20dp"
        android:src="@mipmap/man_cooking_img_foreground"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textColor="@color/carrot_color"
        android:layout_marginTop="50dp"
        android:text="@string/welcome_to_forkify"
        android:textStyle="bold"
        android:textSize="28sp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSlogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/start_your_culinary_adventure"
        android:textColor="@color/carrot_color"
        android:layout_marginTop="15dp"
        android:textSize="15sp"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="80dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/log_in_btn_shape"
            android:textColor="@color/white"
            android:layout_marginHorizontal="15dp"
            android:layout_weight="1"
            android:textSize="17sp"
            android:text="@string/log_in"
            android:textAllCaps="false"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnNewAcc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="17sp"
            android:layout_marginHorizontal="15dp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="@color/carrot_color"
            android:background="@drawable/register_btn_shape"
            android:textAllCaps="false"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>